feat: Add floating WhatsApp button

--- a/index.html
+++ b/index.html
@@ -227,3 +227,10 @@
 </body>
 </html>
 
+
+    <!-- WhatsApp Floating Button -->
+    <a href="https://wa.me/5521987312363" class="whatsapp-float" target="_blank" aria-label="WhatsApp">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Icon">
+    </a>
+</body>
+</html>
