feat: Implement project carousel and interactive map

--- a/index.html
+++ b/index.html
@@ -129,46 +129,51 @@
             <h2 class="section-title">Nossos Projetos</h2>
             <p class="section-subtitle">Conheça alguns dos projetos que refletem nossa excelência e compromisso com a qualidade.</p>
             
-            <div class="projetos-grid">
-                <div class="projeto-card">
-                    <div class="projeto-image placeholder-image">
-                        <span>Projeto 1</span>
+            <div class="carousel-container">
+                <div class="projetos-carousel">
+                    <div class="projeto-card">
+                        <div class="projeto-image placeholder-image">
+                            <span>Projeto 1</span>
+                        </div>
+                        <div class="projeto-info">
+                            <h3>Residência de Alto Padrão</h3>
+                            <p>Projeto completo de engenharia estrutural e instalações para residência de luxo em Icaraí.</p>
+                        </div>
                     </div>
-                    <div class="projeto-info">
-                        <h3>Residência de Alto Padrão</h3>
-                        <p>Projeto completo de engenharia estrutural e instalações para residência de luxo em Icaraí.</p>
-                    </div>
-                </div>
 
-                <div class="projeto-card">
-                    <div class="projeto-image placeholder-image">
-                        <span>Projeto 2</span>
+                    <div class="projeto-card">
+                        <div class="projeto-image placeholder-image">
+                            <span>Projeto 2</span>
+                        </div>
+                        <div class="projeto-info">
+                            <h3>Edifício Comercial</h3>
+                            <p>Administração de obra e instalações elétricas para edifício comercial de 15 andares.</p>
+                        </div>
                     </div>
-                    <div class="projeto-info">
-                        <h3>Edifício Comercial</h3>
-                        <p>Administração de obra e instalações elétricas para edifício comercial de 15 andares.</p>
-                    </div>
-                </div>
 
-                <div class="projeto-card">
-                    <div class="projeto-image placeholder-image">
-                        <span>Projeto 3</span>
+                    <div class="projeto-card">
+                        <div class="projeto-image placeholder-image">
+                            <span>Projeto 3</span>
+                        </div>
+                        <div class="projeto-info">
+                            <h3>Infraestrutura Pública</h3>
+                            <p>Projeto de iluminação e sinalização para vias públicas em parceria com a prefeitura.</p>
+                        </div>
                     </div>
-                    <div class="projeto-info">
-                        <h3>Infraestrutura Pública</h3>
-                        <p>Projeto de iluminação e sinalização para vias públicas em parceria com a prefeitura.</p>
-                    </div>
-                </div>
 
-                <div class="projeto-card">
-                    <div class="projeto-image placeholder-image">
-                        <span>Projeto 4</span>
-                    </div>
-                    <div class="projeto-info">
-                        <h3>Indústria</h3>
-                        <p>Instalação de máquinas e equipamentos industriais com sistemas de prevenção contra incêndio.</p>
+                    <div class="projeto-card">
+                        <div class="projeto-image placeholder-image">
+                            <span>Projeto 4</span>
+                        </div>
+                        <div class="projeto-info">
+                            <h3>Indústria</h3>
+                            <p>Instalação de máquinas e equipamentos industriais com sistemas de prevenção contra incêndio.</p>
+                        </div>
                     </div>
                 </div>
+                <button class="carousel-button prev">&lt;</button>
+                <button class="carousel-button next">&gt;</button>
+                <div class="carousel-dots"></div>
             </div>
         </div>
     </section>
@@ -220,6 +225,9 @@
                         <button type="submit" class="submit-button">Enviar Mensagem</button>
                     </form>
                 </div>
+            </div>
+            <div class="map-container">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.247693672074!2d-43.12607998496818!3d-22.90641998501239!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x99817f4a2d5b7d%3A0x2a1a0b1a0b1a0b1a!2sRua%20Gavi%C3%A3o%20Peixoto%2C%20Icara%C3%AD%2C%20Niter%C3%B3i%20-%20RJ!5e0!3m2!1spt-BR!2sbr!4v1678987654321!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </section>
