feat: Update 'Sobre Nós' text, Hero video placeholder, and project carousel images

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="hero-video-placeholder">
             <!-- Placeholder para vídeo de fundo -->
             <video autoplay muted loop playsinline class="background-video">
-                <source src="https://www.w3schools.com/howto/rain.mp4" type="video/mp4"> <!-- Exemplo de vídeo, será substituído -->
+                <source src="https://www.w3schools.com/howto/mov_bbb.mp4" type="video/mp4"> <!-- Placeholder: Vídeo de construções/engenharia -->
                 Seu navegador não suporta a tag de vídeo.
             </video>
             <div class="hero-overlay"></div>
@@ -59,7 +59,7 @@
             <h2 class="section-title">Sobre a REFLETE ENGENHARIA</h2>
             <div class="sobre-content">
                 <div class="sobre-text">
-                    <p>A <strong>REFLETE ENGENHARIA</strong> é uma empresa especializada em serviços de engenharia de alta qualidade, dedicada a oferecer soluções inovadoras e personalizadas para clientes de alto padrão financeiro, empresas, consultorias, prefeituras e construtoras.</p>
+                    <p>A <strong>REFLETE ENGENHARIA</strong> é uma empresa especializada em serviços de engenharia de alta qualidade, dedicada a oferecer soluções inovadoras e personalizadas para clientes residenciais, empresas, consultorias, prefeituras e construtoras.</p>
                     <p>Nosso nome, <strong>REFLETE</strong>, representa nossa filosofia: refletir sobre cada detalhe, refletir a luz da inovação e refletir a excelência em cada projeto. Acreditamos que a engenharia vai além de cálculos e estruturas; ela reflete o pensamento estratégico, a visão de futuro e o compromisso com a qualidade.</p>
                     <p>Com uma equipe altamente qualificada e experiente, oferecemos um portfólio completo de serviços, desde projetos estruturais até instalações complexas, sempre com foco na precisão, segurança e sustentabilidade.</p>
                 </div>
@@ -131,45 +131,45 @@
             
             <div class="carousel-container">
                 <div class="projetos-carousel">
-                    <div class="projeto-card">
-                        <div class="projeto-image placeholder-image">
-                            <span>Projeto 1</span>
-                        </div>
-                        <div class="projeto-info">
-                            <h3>Residência de Alto Padrão</h3>
-                            <p>Projeto completo de engenharia estrutural e instalações para residência de luxo em Icaraí.</p>
-                        </div>
+                <div class="projeto-card">
+                    <div class="projeto-image placeholder-image">
+                        <img src="https://picsum.photos/id/1060/400/300" alt="Projeto Residencial de Alto Padrão">
                     </div>
+                    <div class="projeto-info">
+                        <h3>Residência de Alto Padrão</h3>
+                        <p>Projeto completo de engenharia estrutural e instalações para residência de luxo em Icaraí.</p>
+                    </div>
+                </div>
 
-                    <div class="projeto-card">
-                        <div class="projeto-image placeholder-image">
-                            <span>Projeto 2</span>
-                        </div>
-                        <div class="projeto-info">
-                            <h3>Edifício Comercial</h3>
-                            <p>Administração de obra e instalações elétricas para edifício comercial de 15 andares.</p>
-                        </div>
+                <div class="projeto-card">
+                    <div class="projeto-image placeholder-image">
+                        <img src="https://picsum.photos/id/1069/400/300" alt="Edifício Comercial">
                     </div>
+                    <div class="projeto-info">
+                        <h3>Edifício Comercial</h3>
+                        <p>Administração de obra e instalações elétricas para edifício comercial de 15 andares.</p>
+                    </div>
+                </div>
 
-                    <div class="projeto-card">
-                        <div class="projeto-image placeholder-image">
-                            <span>Projeto 3</span>
-                        </div>
-                        <div class="projeto-info">
-                            <h3>Infraestrutura Pública</h3>
-                            <p>Projeto de iluminação e sinalização para vias públicas em parceria com a prefeitura.</p>
-                        </div>
+                <div class="projeto-card">
+                    <div class="projeto-image placeholder-image">
+                        <img src="https://picsum.photos/id/1074/400/300" alt="Infraestrutura Pública">
                     </div>
+                    <div class="projeto-info">
+                        <h3>Infraestrutura Pública</h3>
+                        <p>Projeto de iluminação e sinalização para vias públicas em parceria com a prefeitura.</p>
+                    </div>
+                </div>
 
-                    <div class="projeto-card">
-                        <div class="projeto-image placeholder-image">
-                            <span>Projeto 4</span>
-                        </div>
-                        <div class="projeto-info">
-                            <h3>Indústria</h3>
-                            <p>Instalação de máquinas e equipamentos industriais com sistemas de prevenção contra incêndio.</p>
-                        </div>
+                <div class="projeto-card">
+                    <div class="projeto-image placeholder-image">
+                        <img src="https://picsum.photos/id/1080/400/300" alt="Projeto Industrial">
                     </div>
+                    <div class="projeto-info">
+                        <h3>Indústria</h3>
+                        <p>Instalação de máquinas e equipamentos industriais com sistemas de prevenção contra incêndio.</p>
+                    </div>
+                </div>
                 </div>
                 <button class="carousel-button prev">&lt;</button>
                 <button class="carousel-button next">&gt;</button>
