feat: Update logo, Hero video, project carousel images, and add team image placeholder

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header id="header">
         <div class="container">
             <div class="logo">
-                <h1>REFLETE ENGENHARIA</h1>
+                <h1 style="color: var(--primary-gold); font-size: 1.8rem; letter-spacing: 3px;">RE<span style="font-size: 1.2rem; vertical-align: super;">FLETE</span> ENGENHARIA</h1>
             </div>
             <nav id="nav">
                 <button id="menu-toggle" aria-label="Toggle menu">
@@ -40,7 +40,7 @@
         <div class="hero-video-placeholder">
             <!-- Placeholder para vídeo de fundo -->
             <video autoplay muted loop playsinline class="background-video">
-                <source src="https://www.w3schools.com/howto/mov_bbb.mp4" type="video/mp4"> <!-- Placeholder: Vídeo de construções/engenharia -->
+                <source src="https://videos.pexels.com/video-files/3209126/3209126-hd_1920_1080_25fps.mp4" type="video/mp4"> <!-- Placeholder: Vídeo de construções/engenharia (Pexels) -->
                 Seu navegador não suporta a tag de vídeo.
             </video>
             <div class="hero-overlay"></div>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="sobre-image">
                     <div class="placeholder-image">
-                        <span>Imagem da Equipe</span>
+                        <img src="https://picsum.photos/id/1065/600/400" alt="Equipe de Engenheiros em Reunião">
                     </div>
                 </div>
             </div>
@@ -133,7 +133,7 @@
                 <div class="projetos-carousel">
                 <div class="projeto-card">
                     <div class="projeto-image placeholder-image">
-                        <img src="https://picsum.photos/id/1060/400/300" alt="Projeto Residencial de Alto Padrão">
+                        <img src="https://picsum.photos/id/1060/400/300?grayscale&blur=2" alt="Projeto Residencial de Alto Padrão">
                     </div>
                     <div class="projeto-info">
                         <h3>Residência de Alto Padrão</h3>
@@ -143,7 +143,7 @@
 
                 <div class="projeto-card">
                     <div class="projeto-image placeholder-image">
-                        <img src="https://picsum.photos/id/1069/400/300" alt="Edifício Comercial">
+                        <img src="https://picsum.photos/id/1069/400/300?grayscale&blur=2" alt="Edifício Comercial">
                     </div>
                     <div class="projeto-info">
                         <h3>Edifício Comercial</h3>
@@ -153,7 +153,7 @@
 
                 <div class="projeto-card">
                     <div class="projeto-image placeholder-image">
-                        <img src="https://picsum.photos/id/1074/400/300" alt="Infraestrutura Pública">
+                        <img src="https://picsum.photos/id/1074/400/300?grayscale&blur=2" alt="Infraestrutura Pública">
                     </div>
                     <div class="projeto-info">
                         <h3>Infraestrutura Pública</h3>
@@ -163,7 +163,7 @@
 
                 <div class="projeto-card">
                     <div class="projeto-image placeholder-image">
-                        <img src="https://picsum.photos/id/1080/400/300" alt="Projeto Industrial">
+                        <img src="https://picsum.photos/id/1080/400/300?grayscale&blur=2" alt="Projeto Industrial">
                     </div>
                     <div class="projeto-info">
                         <h3>Indústria</h3>
