feat: Integrate provided logo, update Hero video placeholder, refine project carousel images, and add team image placeholder

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header id="header">
         <div class="container">
             <div class="logo">
-                <h1 style="color: var(--primary-gold); font-size: 1.8rem; letter-spacing: 3px;">RE<span style="font-size: 1.2rem; vertical-align: super;">FLETE</span> ENGENHARIA</h1>
+                <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663107922306/nadcGREvieymJYmv.jpg" alt="REFLETE ENGENHARIA Logo" class="site-logo">
             </div>
             <nav id="nav">
                 <button id="menu-toggle" aria-label="Toggle menu">
@@ -40,7 +40,7 @@
         <div class="hero-video-placeholder">
             <!-- Placeholder para vídeo de fundo -->
             <video autoplay muted loop playsinline class="background-video">
-                <source src="https://videos.pexels.com/video-files/3209126/3209126-hd_1920_1080_25fps.mp4" type="video/mp4"> <!-- Placeholder: Vídeo de construções/engenharia (Pexels) -->
+                <source src="https://www.w3schools.com/howto/mov_bbb.mp4" type="video/mp4"> <!-- Placeholder temporário: vídeo de construção -->
                 Seu navegador não suporta a tag de vídeo.
             </video>
             <div class="hero-overlay"></div>
