--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     </div>
                     <div class="projeto-info">
                         <h3>Residência de Alto Padrão</h3>
-                        <p>Projeto completo de engenharia estrutural e instalações para residência de luxo em Icaraí.</p>
+                        <p>Projeto completo de engenharia estrutural e instalações para residência de luxo.</p>
                     </div>
                 </div>
 
