feat: Implement all requested changes (video, images, texts, translation)

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
                 <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663107922306/nadcGREvieymJYmv.jpg" alt="REFLETE ENGENHARIA Logo" class="site-logo">
             </div>
             <nav id="nav">
+                <div class="language-selector">
+                    <button class="lang-btn" data-lang="pt">PT</button>
+                    <button class="lang-btn" data-lang="en">EN</button>
+                </div>
                 <button id="menu-toggle" aria-label="Toggle menu">
                     <span></span>
                     <span></span>
@@ -40,7 +44,7 @@
         <div class="hero-video-placeholder">
             <!-- Placeholder para vídeo de fundo -->
             <video autoplay muted loop playsinline class="background-video">
-                <source src="https://www.w3schools.com/howto/mov_bbb.mp4" type="video/mp4"> <!-- Placeholder temporário: vídeo de construção -->
+                <source src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663107922306/QyQGqTOzGxHmPESJ.gif" type="video/mp4"> <!-- Vídeo de fundo: GIF de construções -->
                 Seu navegador não suporta a tag de vídeo.
             </video>
             <div class="hero-overlay"></div>
@@ -65,7 +69,7 @@
                 </div>
                 <div class="sobre-image">
                     <div class="placeholder-image">
-                        <img src="https://picsum.photos/id/1065/600/400" alt="Equipe de Engenheiros em Reunião">
+                        <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663107922306/oCPWxpgclOyFUEst.png" alt="Equipe de Engenheiros em Reunião">
                     </div>
                 </div>
             </div>
