--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header id="header">
         <div class="container">
             <div class="logo">
-                <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663107922306/nadcGREvieymJYmv.jpg" alt="REFLETE ENGENHARIA Logo" class="site-logo">
+                <a href="#inicio"><img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663107922306/nadcGREvieymJYmv.jpg" alt="REFLETE ENGENHARIA Logo" class="site-logo"></a>
             </div>
             <nav id="nav">
                 <div class="language-selector">
