fix: Correct GIF MIME type and update carousel images

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="hero-video-placeholder">
             <!-- Placeholder para vídeo de fundo -->
             <video autoplay muted loop playsinline class="background-video">
-                <source src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663107922306/QyQGqTOzGxHmPESJ.gif" type="video/mp4"> <!-- Vídeo de fundo: GIF de construções -->
+                <source src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663107922306/QyQGqTOzGxHmPESJ.gif" type="image/gif"> <!-- Vídeo de fundo: GIF de construções -->
                 Seu navegador não suporta a tag de vídeo.
             </video>
             <div class="hero-overlay"></div>
@@ -137,7 +137,7 @@
                 <div class="projetos-carousel">
                 <div class="projeto-card">
                     <div class="projeto-image placeholder-image">
-                        <img src="https://picsum.photos/id/1060/400/300?grayscale&blur=2" alt="Projeto Residencial de Alto Padrão">
+                        <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663107922306/IdqwQyhiXhDNITMs.jpg" alt="Residência de Luxo">
                     </div>
                     <div class="projeto-info">
                         <h3>Residência de Alto Padrão</h3>
@@ -147,7 +147,7 @@
 
                 <div class="projeto-card">
                     <div class="projeto-image placeholder-image">
-                        <img src="https://picsum.photos/id/1069/400/300?grayscale&blur=2" alt="Edifício Comercial">
+                        <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663107922306/UzOyVfPXokpnMvhe.jpg" alt="Edifício Comercial">
                     </div>
                     <div class="projeto-info">
                         <h3>Edifício Comercial</h3>
@@ -157,7 +157,7 @@
 
                 <div class="projeto-card">
                     <div class="projeto-image placeholder-image">
-                        <img src="https://picsum.photos/id/1074/400/300?grayscale&blur=2" alt="Infraestrutura Pública">
+                        <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663107922306/XFWLsQrrunLvxcqm.jpg" alt="Infraestrutura Pública">
                     </div>
                     <div class="projeto-info">
                         <h3>Infraestrutura Pública</h3>
@@ -167,7 +167,7 @@
 
                 <div class="projeto-card">
                     <div class="projeto-image placeholder-image">
-                        <img src="https://picsum.photos/id/1080/400/300?grayscale&blur=2" alt="Projeto Industrial">
+                        <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663107922306/CsqNVBxqOoNEiahi.jpg" alt="Indústria">
                     </div>
                     <div class="projeto-info">
                         <h3>Indústria</h3>
