feat: Update Hero background video with new MP4 and adjust CSS for proper display

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="hero-video-placeholder">
             <!-- Placeholder para vídeo de fundo -->
             <video autoplay muted loop playsinline class="background-video">
-                <source src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663107922306/QyQGqTOzGxHmPESJ.gif" type="image/gif"> <!-- Vídeo de fundo: GIF de construções -->
+                <source src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663107922306/HEIemttNIsajmRja.mp4" type="video/mp4"> <!-- Vídeo de fundo: MP4 de construções -->
                 Seu navegador não suporta a tag de vídeo.
             </video>
             <div class="hero-overlay"></div>
