feat: Integrate Formspree and add Instagram link

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 </div>
 
                 <div class="contato-form">
-                    <form id="contact-form">
+                    <form id="contact-form" action="https://formspree.io/f/movkyqep" method="POST">
                         <div class="form-group">
                             <label for="nome">Nome Completo</label>
                             <input type="text" id="nome" name="nome" required>
@@ -240,6 +240,9 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 REFLETE ENGENHARIA - Todos os direitos reservados.</p>
+            <div class="social-links">
+                <a href="https://www.instagram.com/refleteengenharia?igsh=MWt5MHRrbmlwc2RwbA==" target="_blank" aria-label="Instagram"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram Icon" style="width: 24px; height: 24px;"></a>
+            </div>
             <p>CNPJ: 63.072.741/0001-06</p>
         </div>
     </footer>
