--- a/index.html
+++ b/index.html
@@ -188,27 +188,29 @@
             <h2 class="section-title">Entre em Contato</h2>
             <p class="section-subtitle">Estamos prontos para transformar suas ideias em realidade. Entre em contato conosco.</p>
             
-            <div class="contato-content">
-                <div class="contato-info">
-                    <div class="info-item">
+            <div class="contato-content-centered">
+                <div class="contato-info-grid">
+                    <div class="info-card">
+                        <div class="info-icon">📍</div>
                         <h3>Endereço</h3>
                         <p>Rua Gavião Peixoto<br>Icaraí - RJ</p>
                     </div>
-                    <div class="info-item">
+                    <div class="info-card">
+                        <div class="info-icon">📱</div>
                         <h3>Telefone / WhatsApp</h3>
                         <p><a href="https://wa.me/5521987312363" target="_blank">(21) 98731-2363</a></p>
                     </div>
-                    <div class="info-item">
+                    <div class="info-card">
+                        <div class="info-icon">✉️</div>
                         <h3>E-mail</h3>
                         <p><a href="mailto:contato@refleteengenharia.com.br">contato@refleteengenharia.com.br</a></p>
                     </div>
-                    <div class="info-item">
+                    <div class="info-card">
+                        <div class="info-icon">🏢</div>
                         <h3>CNPJ</h3>
                         <p>63.072.741/0001-06</p>
                     </div>
                 </div>
-
-
             </div>
             <div class="map-container">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.247693672074!2d-43.12607998496818!3d-22.90641998501239!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x99817f4a2d5b7d%3A0x2a1a0b1a0b1a0b1a!2sRua%20Gavi%C3%A3o%20Peixoto%2C%20Icara%C3%AD%2C%20Niter%C3%B3i%20-%20RJ!5e0!3m2!1spt-BR!2sbr!4v1678987654321!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
