--- a/index.html
+++ b/index.html
@@ -188,34 +188,22 @@
             <h2 class="section-title">Entre em Contato</h2>
             <p class="section-subtitle">Estamos prontos para transformar suas ideias em realidade. Entre em contato conosco.</p>
             
-            <div class="contato-details">
-                <div class="detail-item">
-                    <div class="detail-icon">📍</div>
-                    <div class="detail-text">
-                        <h3>Endereço</h3>
-                        <p>Rua Gavião Peixoto, Icaraí - RJ</p>
-                    </div>
+            <div class="contato-list">
+                <div class="contato-item">
+                    <h3>Endereço</h3>
+                    <p>Rua Gavião Peixoto, Icaraí - RJ</p>
                 </div>
-                <div class="detail-item">
-                    <div class="detail-icon">📱</div>
-                    <div class="detail-text">
-                        <h3>Telefone / WhatsApp</h3>
-                        <p><a href="https://wa.me/5521987312363" target="_blank">(21) 98731-2363</a></p>
-                    </div>
+                <div class="contato-item">
+                    <h3>Telefone / WhatsApp</h3>
+                    <p><a href="https://wa.me/5521987312363" target="_blank">(21) 98731-2363</a></p>
                 </div>
-                <div class="detail-item">
-                    <div class="detail-icon">✉️</div>
-                    <div class="detail-text">
-                        <h3>E-mail</h3>
-                        <p><a href="mailto:contato@refleteengenharia.com.br">contato@refleteengenharia.com.br</a></p>
-                    </div>
+                <div class="contato-item">
+                    <h3>E-mail</h3>
+                    <p><a href="mailto:contato@refleteengenharia.com.br">contato@refleteengenharia.com.br</a></p>
                 </div>
-                <div class="detail-item">
-                    <div class="detail-icon">🏢</div>
-                    <div class="detail-text">
-                        <h3>CNPJ</h3>
-                        <p>63.072.741/0001-06</p>
-                    </div>
+                <div class="contato-item">
+                    <h3>CNPJ</h3>
+                    <p>63.072.741/0001-06</p>
                 </div>
             </div>
             <div class="map-container">
