Atualiza logo e adiciona texto 'Reflete Engenharia' no cabeçalho

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <header id="header">
         <div class="container">
             <div class="logo">
-                <a href="#inicio"><img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663107922306/nadcGREvieymJYmv.jpg" alt="REFLETE ENGENHARIA Logo" class="site-logo"></a>
+                <a href="#inicio" class="logo-link"><img src="https://manus-mcp-uploads.s3.amazonaws.com/reflete_r_symbol_centered_square.jpg" alt="Reflete Engenharia Logo" class="site-logo"><span class="logo-text">REFLETE ENGENHARIA</span></a>
             </div>
             <nav id="nav">
                 <div class="language-selector">
