Fix 405: Altera action do formulário para /success.html e adiciona hidden form no success.html para forçar detecção do Netlify.

--- a/contato.html
+++ b/contato.html
@@ -79,7 +79,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                 <!-- Formulário de Contato para Netlify -->
                 <div class="contato-form">
-                    <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/success">
+                    <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/success.html">
                         <input type="hidden" name="form-name" value="contact" />
                         <p style="display: none;">
                             <label>Não preencha: <input name="bot-field" /></label>
