--- a/success.html
+++ b/success.html
@@ -55,6 +55,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </style>
 </head>
 <body>
+    <form name="contact" netlify hidden></form>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5H5HDPFS"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
