Implementa seção de Depoimentos (Provas Sociais) no index.html com 6 depoimentos estratégicos e estilos responsivos.

--- a/index.html
+++ b/index.html
@@ -138,6 +138,58 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
     </section>
 
+    <!-- Depoimentos Section -->
+    <section id="depoimentos" class="depoimentos">
+        <div class="container">
+            <h2 class="section-title">O que nossos clientes dizem</h2>
+            <p class="section-subtitle">Provas sociais que refletem nossa excelência, precisão e profissionalismo.</p>
+
+            <div class="depoimentos-grid">
+                <!-- Depoimento 1: O Depoimento do Arquiteto (Foco: Precisão e Parceria) -->
+                <div class="depoimento-card">
+                    <p class="quote-text">"A Reflete Engenharia é a parceira que todo arquiteto sonha em ter. Eles executam a visão do projeto com uma precisão técnica impecável."</p>
+                    <p class="quote-source">DIANA MELLO, Designer</p>
+                    <p class="quote-context">ARQ. LUXO ALTP.</p>
+                </div>
+
+                <!-- Depoimento 2: O Depoimento Residencial (Foco: Tranquilidade e Qualidade) -->
+                <div class="depoimento-card">
+                    <p class="quote-text">"Foi a primeira reforma que fiz sem nenhuma dor de cabeça. A gestão da Reflete Engenharia é algo que eu não conhecia no mercado."</p>
+                    <p class="quote-source">Maria Alice R.</p>
+                    <p class="quote-context">Cliente, Reforma de Apartamento de Luxo (Leblon)</p>
+                </div>
+
+                <!-- Depoimento 3: O Depoimento do Síndico (Foco: Segurança e Organização) -->
+                <div class="depoimento-card">
+                    <p class="quote-text">"Profissionalismo exemplar. A Reflete realizou o retrofit da nossa fachada e sistemas de segurança com organização e conformidade técnica total."</p>
+                    <p class="quote-source">Carlos T. Mendes</p>
+                    <p class="quote-context">Síndico Profissional, Condomínio de Alto Padrão (Barra da Tijuca)</p>
+                </div>
+
+                <!-- Depoimento 4: O Depoimento Comercial/Investidor (Foco: Prazo e Orçamento) -->
+                <div class="depoimento-card">
+                    <p class="quote-text">"100% dentro do prazo e do orçamento. Em projetos comerciais, isso é o que define uma engenharia de excelência."</p>
+                    <p class="quote-source">Ricardo G.</p>
+                    <p class="quote-context">Diretor de Expansão</p>
+                </div>
+
+                <!-- Depoimento 5: O Depoimento de Expertise (Foco: Solução de Problemas Complexos) -->
+                <div class="depoimento-card">
+                    <p class="quote-text">"Tínhamos um desafio complexo de climatização e automação que ninguém resolvia. A Reflete trouxe uma solução de engenharia que foi simplesmente brilhante."</p>
+                    <p class="quote-source">Dr. André V.</p>
+                    <p class="quote-context">Diretor, Clínica de Alto Padrão (Ipanema)</p>
+                </div>
+
+                <!-- Depoimento 6: O Depoimento de Gestão e Consultoria (Foco: Confiança Inicial) -->
+                <div class="depoimento-card">
+                    <p class="quote-text">"A fase de consultoria da Reflete foi o que nos deu segurança para começar."</p>
+                    <p class="quote-source">Família S. M.</p>
+                    <p class="quote-context">Cliente, Projeto de Residência (Niterói)</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Projetos Section -->
     <section id="projetos" class="projetos">
         <div class="container">
